# logger_http

./: CMakeLists.txt  Kconfig  README.md  base64url.c  http_async_handler.c  http_rest_server.c  https_ota.c  idf_component.yml  logger_http_private.h  ota.c  uri_common.c
include/: http_async_handler.h  http_rest_server.h  https_ota.h  ota.h  ota_events.h  uri_common.h
web-frontend-tiny/: AGENTS.md  Gruntfile.js  package.json  webpack.config.js
web-frontend-tiny/public/: config.html  files.html  fwupdate.html  index.css  index.html  index.js
web-frontend-tiny/src/: config.pug  files.pug  fwupdate.pug  index.css  index.css.map  index.js  index.pug  index.scss  info.json  layout.pug
